cmake_minimum_required(VERSION 3.14)
project(Practica_15 CXX)
set(CMAKE_CXX_STANDARD 17)
add_executable(practica_15 main.cpp Recursividad.cpp)
target_include_directories(practica_15 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_link_libraries(practica_15 PRIVATE stdc++)
endif()
